--- a/index.html
+++ b/index.html
@@ -13,32 +13,100 @@ Github URI: https://github.com/hassan-siraj/Css3-Only-Menu.git
 Version: 1.0
 */
 * { margin: 0px; padding: 0px; font-family: 'Roboto Slab', serif; }
-.menu { margin: 50px; position: relative; height: 100%; display: inline-block; }
-.menu .menu-wrap .nav-button { background: #00c853; width: 70px; color: #fff; height: 70px; display: inline-block; text-align: center; line-height: 70px; position: absolute; left: 0px; font-size: 30px; z-index: 999; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; }
-.menu .menu-wrap .nav-button .close-nav { display: none; }
-.menu .menu-wrap ul { padding-top: 70px; list-style: none; background: #00e676; opacity: 0; width: 0px; border-top-left-radius: 50px; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; -moz-transform: rotate(0deg); -webkit-transform: rotate(0deg); -o-transform: rotate(0deg); -ms-transform: rotate(0deg); transform: rotate(0deg); -moz-transform: scale(0); -webkit-transform: scale(0); -o-transform: scale(0); -ms-transform: scale(0); transform: scale(0); transform-origin: 0 0; }
-.menu .menu-wrap ul li { font-size: 20px; width: 100%; overflow: hidden; }
-.menu .menu-wrap ul li a { padding: 20px; display: inline-block; width: 100%; color: #fff; position: relative; text-decoration: none; }
-.menu .menu-wrap ul li a:hover { background: #00c853; color: #fff; text-decoration: none; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; }
-.menu .menu-wrap ul li a:after { position: absolute; border-bottom: 2px solid #fff; width: 0%; content: ""; left: 0px; bottom: 0px; }
-.menu .menu-wrap ul li a:hover:after { width: 100%; -webkit-transition: all .6s ease; -moz-transition: all .6s ease; -ms-transition: all .6s ease; -o-transition: all .6s ease; transition: all .6s ease; }
-.menu .menu-wrap:hover .nav-button, .menu .menu-wrap:focus, .menu-wrap .nav-button ~ ul:hover { -moz-transform: rotate(360deg); -webkit-transform: rotate(360deg); -o-transform: rotate(360deg); -ms-transform: rotate(360deg); transform: rotate(360deg); -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; }
-.menu .menu-wrap:hover .nav-button .open-nav { display: none; }
-.menu .menu-wrap:hover .nav-button .close-nav { display: inline-block; }
-.menu .menu-wrap .nav-button:hover ~ ul, .menu .menu-wrap .nav-button ~ ul:hover { display: inline-block; width: 300px; opacity: 1; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; -moz-transform: scale(1); -webkit-transform: scale(1); -o-transform: scale(1); -ms-transform: scale(1); transform: scale(1); border-radius: 0%; }
+/**Left Menu**/
+.left-bg { background: #4527a0; min-height: 610px; }
+.left-bg h1 { font-size: 40px; text-align: center; color: #fff; padding-top: 50px; padding-bottom: 50px; }
+.left-bg .menu { left: 50px; position: relative; height: 100%; display: inline-block; }
+.left-bg .menu .menu-wrap .nav-button { background: #6200ea; width: 70px; color: #fff; height: 70px; display: inline-block; text-align: center; line-height: 70px; position: absolute; left: 0px; font-size: 30px; z-index: 999; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; }
+.left-bg .menu .menu-wrap .nav-button .close-nav { display: none; }
+.left-bg .menu .menu-wrap ul { padding-top: 70px; list-style: none; background: #651fff; opacity: 0; width: 0px; border-top-left-radius: 50px; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; -moz-transform: rotate(0deg); -webkit-transform: rotate(0deg); -o-transform: rotate(0deg); -ms-transform: rotate(0deg); transform: rotate(0deg); -moz-transform: scale(0); -webkit-transform: scale(0); -o-transform: scale(0); -ms-transform: scale(0); transform: scale(0); transform-origin: 0 0; }
+.left-bg .menu .menu-wrap ul li { font-size: 20px; width: 100%; overflow: hidden; }
+.left-bg .menu .menu-wrap ul li a { padding: 20px; display: inline-block; width: 100%; color: #fff; position: relative; text-decoration: none; }
+.left-bg .menu .menu-wrap ul li a:hover { background: #6200ea; color: #fff; text-decoration: none; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; }
+.left-bg .menu .menu-wrap ul li a:after { position: absolute; border-bottom: 2px solid #fff; width: 0%; content: ""; left: 0px; bottom: 0px; }
+.left-bg .menu .menu-wrap ul li a:hover:after { width: 100%; -webkit-transition: all .6s ease; -moz-transition: all .6s ease; -ms-transition: all .6s ease; -o-transition: all .6s ease; transition: all .6s ease; }
+.left-bg .menu .menu-wrap:hover .nav-button, .menu .menu-wrap:focus, .menu-wrap .nav-button ~ ul:hover { -moz-transform: rotate(360deg); -webkit-transform: rotate(360deg); -o-transform: rotate(360deg); -ms-transform: rotate(360deg); transform: rotate(360deg); -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; }
+.left-bg .menu .menu-wrap:hover .nav-button .open-nav { display: none; }
+.left-bg .menu .menu-wrap:hover .nav-button .close-nav { display: inline-block; }
+.left-bg .menu .menu-wrap .nav-button:hover ~ ul, .left-bg .menu .menu-wrap .nav-button ~ ul:hover { display: inline-block; width: 300px; opacity: 1; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; -moz-transform: scale(1); -webkit-transform: scale(1); -o-transform: scale(1); -ms-transform: scale(1); transform: scale(1); border-radius: 0%; }
+/**Right Menu**/
+.right-bg { background: #1565c0; min-height: 610px; }
+.right-bg h1 { font-size: 40px; text-align: center; color: #fff; padding-top: 50px; padding-bottom: 50px; }
+.right-bg .menu { right: 50px; width: 100%; position: relative; height: 100%; display: inline-block; }
+.right-bg .menu .menu-wrap .nav-button { background: #1e88e5; width: 70px; color: #fff; height: 70px; display: inline-block; text-align: center; line-height: 70px; position: absolute; right: 0px; font-size: 30px; z-index: 999; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; }
+.right-bg .menu .menu-wrap .nav-button .close-nav { display: none; }
+.right-bg .menu .menu-wrap ul { padding-top: 70px; list-style: none; background: #0d47a1; opacity: 0; width: 0px; border-top-right-radius: 50px; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; -moz-transform: rotate(0deg); -webkit-transform: rotate(0deg); -o-transform: rotate(0deg); -ms-transform: rotate(0deg); transform: rotate(0deg); -moz-transform: scale(0); -webkit-transform: scale(0); -o-transform: scale(0); -ms-transform: scale(0); transform: scale(0); transform-origin: 0 0; right: 0px; position: absolute; }
+.right-bg .menu .menu-wrap ul li { font-size: 20px; width: 100%; overflow: hidden; }
+.right-bg .menu .menu-wrap ul li a { padding: 20px; display: inline-block; width: 100%; color: #fff; position: relative; text-decoration: none; }
+.right-bg .menu .menu-wrap ul li a:hover { background: #1e88e5; color: #fff; text-decoration: none; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; }
+.right-bg .menu .menu-wrap ul li a:after { position: absolute; border-bottom: 2px solid #fff; width: 0%; content: ""; right: 0px; bottom: 0px; }
+.right-bg .menu .menu-wrap ul li a:hover:after { width: 100%; -webkit-transition: all .6s ease; -moz-transition: all .6s ease; -ms-transition: all .6s ease; -o-transition: all .6s ease; transition: all .6s ease; }
+.right-bg .menu .menu-wrap:hover .nav-button, .right-bg .menu .menu-wrap:focus, .right-bg .menu-wrap .nav-button ~ ul:hover { -moz-transform: rotate(-360deg); -webkit-transform: rotate(-360deg); -o-transform: rotate(-360deg); -ms-transform: rotate(-360deg); transform: rotate(-360deg); -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; }
+.right-bg .menu .menu-wrap:hover .nav-button .open-nav { display: none; }
+.right-bg .menu .menu-wrap:hover .nav-button .close-nav { display: inline-block; }
+.right-bg .menu .menu-wrap .nav-button:hover ~ ul, .right-bg .menu .menu-wrap .nav-button ~ ul:hover { display: inline-block; width: 300px; opacity: 1; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; -moz-transform: scale(1); -webkit-transform: scale(1); -o-transform: scale(1); -ms-transform: scale(1); transform: scale(1); border-radius: 0%; }
+/**Center Menu**/
+.center-bg { background: #c62828; min-height: 610px; text-align: center; }
+.center-bg h1 { font-size: 40px; text-align: center; color: #fff; padding-top: 50px; padding-bottom: 50px; }
+.center-bg .menu { right: auto; width: 100%; position: relative; height: 100%; display: inline-block; }
+.center-bg .menu .menu-wrap .nav-button { background: #e53935; width: 70px; color: #fff; height: 70px; display: inline-block; text-align: center; line-height: 70px; position: absolute; left: 50%; margin-left: -35px; font-size: 30px; z-index: 999; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; }
+.center-bg .menu .menu-wrap .nav-button .close-nav { display: none; }
+.center-bg .menu .menu-wrap ul { padding-top: 70px; list-style: none; background: #ef5350; opacity: 0; width: 0px; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; -moz-transform: rotate(0deg); -webkit-transform: rotate(0deg); -o-transform: rotate(0deg); -ms-transform: rotate(0deg); transform: rotate(0deg); -moz-transform: scale(0); -webkit-transform: scale(0); -o-transform: scale(0); -ms-transform: scale(0); transform: scale(0); transform-origin: 0 0; left: 50%; margin-left: -150px; position: absolute; top: 0px; right: auto; }
+.center-bg .menu .menu-wrap ul li { font-size: 20px; width: 100%; overflow: hidden; }
+.center-bg .menu .menu-wrap ul li a { padding: 20px 0px; display: inline-block; width: 100%; color: #fff; position: relative; text-decoration: none; }
+.center-bg .menu .menu-wrap ul li a:hover { background: #e53935; color: #fff; text-decoration: none; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; }
+.center-bg .menu .menu-wrap ul li a:before { position: absolute; border-bottom: 2px solid #fff; width: 0%; content: ""; left: 50%; bottom: 0px; }
+.center-bg .menu .menu-wrap ul li a:after { position: absolute; border-bottom: 2px solid #fff; width: 0%; content: ""; right: 50%; bottom: 0px; }
+.center-bg .menu .menu-wrap ul li a:hover:before { width: 100%; -webkit-transition: all .6s ease; -moz-transition: all .6s ease; -ms-transition: all .6s ease; -o-transition: all .6s ease; transition: all .6s ease; }
+.center-bg .menu .menu-wrap ul li a:hover:after { width: 100%; -webkit-transition: all .6s ease; -moz-transition: all .6s ease; -ms-transition: all .6s ease; -o-transition: all .6s ease; transition: all .6s ease; }
+.center-bg .menu .menu-wrap:hover .nav-button, .center-bg .menu .menu-wrap:focus, .center-bg .menu-wrap .nav-button ~ ul:hover { -moz-transform: rotate(-360deg); -webkit-transform: rotate(-360deg); -o-transform: rotate(-360deg); -ms-transform: rotate(-360deg); transform: rotate(-360deg); -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; }
+.center-bg .menu .menu-wrap:hover .nav-button .open-nav { display: none; }
+.center-bg .menu .menu-wrap:hover .nav-button .close-nav { display: inline-block; }
+.center-bg .menu .menu-wrap .nav-button:hover ~ ul, .center-bg .menu .menu-wrap .nav-button ~ ul:hover { display: inline-block; width: 300px; opacity: 1; -webkit-transition: all .3s ease; -moz-transition: all .3s ease; -ms-transition: all .3s ease; -o-transition: all .3s ease; transition: all .3s ease; -moz-transform: scale(1); -webkit-transform: scale(1); -o-transform: scale(1); -ms-transform: scale(1); transform: scale(1); border-radius: 0%; }
 </style>
 </head>
 
 <body>
-<div class="menu">
-	<div class="menu-wrap"> <a href="#." title="" class="nav-button"><i class="fa fa-bars open-nav"></i><i class="fa fa-times close-nav"></i></a>
-		<ul>
-			<li><a href="#." title="">Home</a></li>
-			<li><a href="#." title="">About</a></li>
-			<li><a href="#." title="">Projects</a></li>
-			<li><a href="#." title="">Services</a></li>
-			<li><a href="#." title="">Contact</a></li>
-		</ul>
+<div class="left-bg">
+	<h1>Left Side Menu</h1>
+	<div class="menu">
+		<div class="menu-wrap"> <a href="#." title="" class="nav-button"><i class="fa fa-bars open-nav"></i><i class="fa fa-times close-nav"></i></a>
+			<ul>
+				<li><a href="#." title="">Home</a></li>
+				<li><a href="#." title="">About</a></li>
+				<li><a href="#." title="">Projects</a></li>
+				<li><a href="#." title="">Services</a></li>
+				<li><a href="#." title="">Contact</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
+<div class="right-bg">
+	<h1>Right Side Menu</h1>
+	<div class="menu">
+		<div class="menu-wrap"> <a href="#." title="" class="nav-button"><i class="fa fa-bars open-nav"></i><i class="fa fa-times close-nav"></i></a>
+			<ul>
+				<li><a href="#." title="">Home</a></li>
+				<li><a href="#." title="">About</a></li>
+				<li><a href="#." title="">Projects</a></li>
+				<li><a href="#." title="">Services</a></li>
+				<li><a href="#." title="">Contact</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
+<div class="center-bg">
+	<h1>Center Menu</h1>
+	<div class="menu">
+		<div class="menu-wrap"> <a href="#." title="" class="nav-button"><i class="fa fa-bars open-nav"></i><i class="fa fa-times close-nav"></i></a>
+			<ul>
+				<li><a href="#." title="">Home</a></li>
+				<li><a href="#." title="">About</a></li>
+				<li><a href="#." title="">Projects</a></li>
+				<li><a href="#." title="">Services</a></li>
+				<li><a href="#." title="">Contact</a></li>
+			</ul>
+		</div>
 	</div>
 </div>
 </body>
